--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fontawesome-free-5.13.0-web/css/all.css" />
+    <link rel="stylesheet" href="font/flaticon.css">
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
@@ -101,28 +102,17 @@
       <div class="con-support">
         <div class="col-1">
           <div class="card">
-            <p>
-              Lorem fgnhjmk,.ipsum dolor sit amet consectetur adipisicing elit.
-              Repellat, vitae sapiente? Iste dolorum, ducimus ipsum ex earum
-              maiores placeat excepturi aliquam officia iusto necessitatibus
-              nisi! Reiciendis aperiam veniam quo corrupti?
-            </p>
+           <h2>Collaboration</h2>
+           <p>Design for development automated</p>
           </div>
           <div class="card">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Repudiandae quis nihil ea rem voluptatum nobis soluta cum quam
-              facilis, consequatur aspernatur dolore unde quos odio voluptatibus
-              nam beatae ab doloremque?
-            </p>
+          <h2>UI/UX Design</h2>
+          <p>Design for development automated</p>
+          <p></p>
           </div>
           <div class="card">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
-              blanditiis odio non fugit sequi itaque velit provident porro, quis
-              corrupti ipsum saepe eligendi exercitationem aperiam, quas
-              dolorum, debitis maiores sed.
-            </p>
+            <h2>Easy to maintain</h2>
+            <p>Design for development automated</p>
           </div>
         </div>
         <div class="col-2">
